--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1358,6 +1358,13 @@ config TOUCHSCREEN_COMMON
 	  Say Y here if you have a xiaomi touchscreen and
 	  want to enable support for the built-in touchscreen.
 
+config TP_COMMON
+	bool "Common touchscreen interface to interact with userspace"
+	default y
+	help
+	  Say Y here if you want to control touchpanel features
+	  via /sys/touchpanel.
+
 source "drivers/input/touchscreen/synaptics_tcm/Kconfig"
 
 #source "drivers/input/touchscreen/focaltech_touch/Kconfig"
