--- a/drivers/input/touchscreen/ft3418_i2c/Kconfig
+++ b/drivers/input/touchscreen/ft3418_i2c/Kconfig
@@ -4,6 +4,7 @@
 
 config TOUCHSCREEN_FTS
 	bool "Focaltech Touchscreen"
+	depends on DRM_PANEL
 	default n
 	help
 	  Say Y here if you have Focaltech touch panel.
