techpack: audio: Import xiaomi changes
Co-Authored-by: muralivijay <muralidharan9845@gmail.com>
Signed-off-by: mrsrimar22 <mrsrimar22@gmail.com>

--- a/techpack/audio/Makefile
+++ b/techpack/audio/Makefile
@@ -20,8 +20,18 @@ include $(srctree)/techpack/audio/config/litoauto.conf
 export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/litoauto.conf)
 endif
 ifeq ($(CONFIG_ARCH_BENGAL), y)
-include $(srctree)/techpack/audio/config/bengalauto.conf
-export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/bengalauto.conf)
+ifdef CONFIG_TARGET_PROJECT_C3Q
+include $(srctree)/techpack/audio/config/fogauto.conf
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/fogauto.conf)
+else
+    ifdef CONFIG_TARGET_PROJECT_K7T
+	include $(srctree)/techpack/audio/config/spesauto.conf
+	export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/spesauto.conf)
+    else
+	include $(srctree)/techpack/audio/config/bengalauto.conf
+	export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/bengalauto.conf)
+    endif
+endif
 endif
 ifeq ($(CONFIG_ARCH_SDM660), y)
 include $(srctree)/techpack/audio/config/sdm660auto.conf
@@ -38,6 +48,11 @@ USERINCLUDE     += \
 LINUXINCLUDE    += \
                 -I$(srctree)/techpack/audio/include/uapi \
                 -I$(srctree)/techpack/audio/include
+
+ifeq ($(CONFIG_AUDIO_ELLIPTIC_ULTRASOUND), y)
+LINUXINCLUDE    += \
+                -I$(srctree)/techpack/audio/include/elliptic
+endif
 
 ifeq ($(CONFIG_ARCH_SDXPOORWILLS), y)
 LINUXINCLUDE    += \
@@ -60,8 +75,18 @@ LINUXINCLUDE    += \
                 -include $(srctree)/techpack/audio/config/litoautoconf.h
 endif
 ifeq ($(CONFIG_ARCH_BENGAL), y)
+ifdef CONFIG_TARGET_PROJECT_C3Q
 LINUXINCLUDE    += \
-                -include $(srctree)/techpack/audio/config/bengalautoconf.h
+                -include $(srctree)/techpack/audio/config/fogautoconf.h
+else
+    ifdef CONFIG_TARGET_PROJECT_K7T
+	LINUXINCLUDE    += \
+			-include $(srctree)/techpack/audio/config/spesautoconf.h
+    else
+	LINUXINCLUDE    += \
+			-include $(srctree)/techpack/audio/config/bengalautoconf.h
+    endif
+endif
 endif
 ifeq ($(CONFIG_ARCH_SDM660), y)
 LINUXINCLUDE    += \
