--- a/techpack/camera-bengal/Makefile
+++ b/techpack/camera-bengal/Makefile
@@ -19,6 +19,11 @@ LINUXINCLUDE    += \
 		-include $(srctree)/techpack/camera-bengal/config/khajecameraconf.h
 endif
 
+ifeq ($(CONFIG_TARGET_PROJECT_K7T), y)
+LINUXINCLUDE    += \
+		-include $(srctree)/techpack/camera-bengal/config/legacycameraconf.h
+endif
+
 ifdef CONFIG_SPECTRA_CAMERA_BENGAL
 # Use USERINCLUDE when you must reference the UAPI directories only.
 USERINCLUDE     += \
