arm64: configs: spes-perf_defconfig: Enable Clang ThinLTO
Change-Id: 9a4b59b7bae0d2f47ef66c3e64498ded7f46c90b
Signed-off-by: mrsrimar22 <mrsrimar22@gmail.com>

--- a/scripts/Makefile.clang
+++ b/scripts/Makefile.clang
@@ -35,5 +35,6 @@ endif
 CLANG_FLAGS	+= -Werror=unknown-warning-option
 CLANG_FLAGS	+= -Werror=ignored-optimization-argument
 CLANG_FLAGS	+= $(call cc-option, -Wno-unsequenced)
+CLANG_FLAGS	+= $(call cc-option, -Wno-default-const-init-var-unsafe)
 KBUILD_CPPFLAGS	+= $(CLANG_FLAGS)
 export CLANG_FLAGS
